--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+  display: grid;
+  place-content: center;
+  height: 100vh;
+  width: 100%;
+  visibility: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.circle {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin: 20px;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.circle:nth-child(1) {
+  background-color: yellow;
 }
 
-.App-link {
-  color: #61dafb;
+.circle:nth-child(2) {
+  background-color: blue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.circle:nth-child(3) {
+  background-color: red;
+}
+
+.slider {
+  height: 100vh;
+  position: absolute;
+  top: 0px;
+  width: 100%;
+  background-color: rgb(17, 17, 17);
+  color: whitesmoke;
+  font-size: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  display: grid;
+  place-content: center;
+  z-index: 1;
 }
