--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,16 @@
 .app {
   display: grid;
   place-content: center;
-  height: 100vh;
   width: 100%;
   visibility: hidden;
+}
+
+.circle-con {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .circle {
@@ -34,7 +41,7 @@
 
 .slider {
   height: 100vh;
-  position: absolute;
+  position: fixed;
   top: 0px;
   width: 100%;
   background-color: rgb(17, 17, 17);
@@ -45,4 +52,23 @@
   display: grid;
   place-content: center;
   z-index: 1;
+}
+
+.trans {
+  height: fit-content;
+  width: 75%;
+  margin: 0 auto;
+  font-size: 18px;
+}
+
+.row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-gap: 10px 10px;
+}
+
+.row img {
+  object-fit: contain;
+  object-position: center;
 }
